--- a/package.json
+++ b/package.json
@@ -8,8 +8,9 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js",
-    "dev": "nodemon index.js"
+    "start": "node index.js",
+    "dev": "nodemon index.js",
+    "postinstall": "knex migrate:latest"
   },
   "repository": {
     "type": "git",
@@ -26,6 +27,7 @@
     "express-handlebars": "^5.1.0",
     "knex": "^0.21.5",
     "nodemon": "^2.0.4",
+    "pg": "^8.3.2",
     "sqlite3": "^5.0.0"
   }
 }
